<resources>
    <string name="app_name">Qsirch_OfflineFiles</string>
    <string name="search">Search</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="drawer_open">開啓導航抽屜</string>
    <string name="drawer_close">關閉導航抽屜</string>
    <string name="homelayout">HomeLayout</string>
    <string name="cantreadfolder">Cannot read folder due to permissions</string>
    <string name="cantopenfile">Cannot open this file</string>
    <string name="download_time_descending">Download time (Descending)</string>
    <string name="download_time_ascending">Download time (Ascending)</string>
    <string name="file_name_descending">File name (Descending)</string>
    <string name="file_name_ascending">File name (Ascending)</string>
    <string name="modified_date_descending">Modified date (Descending)</string>
    <string name="modified_date_ascending">Modified date (Ascending)</string>
    <string name="file_size_descending">File size (Descending)</string>
    <string name="file_size_ascending">File size (Ascending)</string>
    <string name="open_file">Open</string>
    <string name="str_open_in">Open in others apps</string>
    <string name="share_link">Share directly</string>
    <string name="details">Details</string>
    <string name="delete">Delete</string>
    <string name="function">Functions</string>
</resources>
