<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fileDetailsDrawerLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_default_color"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dip"
            android:gravity="bottom"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:scaleType="centerInside"

                android:src="@drawable/excel" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/file_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="File Size" />

                <TextView
                    android:id="@+id/file_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="File Type" />

                <TextView
                    android:id="@+id/file_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="File Date" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/file_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="File Name" />

        <TextView
            android:id="@+id/file_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="File Path" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:text="@string/function" />

        <LinearLayout
            android:id="@+id/file_detail_items_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/preference_item_padding_side"
            android:divider="@drawable/divider_list_item"
            android:orientation="vertical"
            android:showDividers="middle">

            <TextView
                android:id="@+id/file_openButton"
                style="@style/FileDetailsListItem"
                android:drawableLeft="@drawable/ic_detail_open"
                android:drawablePadding="@dimen/preference_item_padding_inner"
                android:focusable="true"
                android:nextFocusLeft="@+id/file_openButton"
                android:nextFocusRight="@+id/file_openButton"
                android:nextFocusUp="@+id/file_openButton"
                android:text="@string/open_file" />

            <TextView
                android:id="@+id/file_openinButton"
                style="@style/FileDetailsListItem"
                android:drawableLeft="@drawable/ic_detail_download_open"
                android:drawablePadding="@dimen/preference_item_padding_inner"
                android:focusable="true"
                android:nextFocusLeft="@+id/file_openinButton"
                android:nextFocusRight="@+id/file_openinButton"
                android:text="@string/str_open_in" />

            <TextView
                android:id="@+id/file_sharelinkButton"
                style="@style/FileDetailsListItem"
                android:drawableLeft="@drawable/ic_detail_share_link"
                android:drawablePadding="@dimen/preference_item_padding_inner"
                android:focusable="true"
                android:nextFocusLeft="@+id/file_sharelinkButton"
                android:nextFocusRight="@+id/file_sharelinkButton"
                android:text="@string/share_link" />

            <TextView
                android:id="@+id/file_detailButton"
                style="@style/FileDetailsListItem"
                android:drawableLeft="@drawable/ic_detail_dlna"
                android:drawablePadding="@dimen/preference_item_padding_inner"
                android:focusable="true"
                android:nextFocusLeft="@+id/file_sharelinkButton"
                android:nextFocusRight="@+id/file_sharelinkButton"
                android:text="@string/details" />

            <TextView
                android:id="@+id/file_deleteButton"
                style="@style/FileDetailsListItem"
                android:drawableLeft="@drawable/ic_detail_delete"
                android:drawablePadding="@dimen/preference_item_padding_inner"
                android:focusable="true"
                android:nextFocusLeft="@+id/file_deleteButton"
                android:nextFocusRight="@+id/file_deleteButton"
                android:text="@string/delete" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>